--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ compiler:
 - clang
 - gcc
 script:
-- gcc -o test helloWorld.c // we can use gcc instead of clang too
+- gcc -o test hello.c // we can use gcc instead of clang too
 - ./test 
